# IntelliEditor

./: .gitignore  CMakeLists.txt  README.md  check_arch.ps1  check_bin_arch.ps1  err_v.txt  scintilla_stub.c
data/: demo_text.txt  test_rules.json
data/rule_templates/: memoire_licence.json  rapport.json
data/rules/: memoire_licence.json
include/: ILexer.h  Scintilla.h  ScintillaCall.h  ScintillaMessages.h  ScintillaStructures.h  ScintillaTypes.h  ScintillaWidget.h  buffer.h  config.h  encoding.h  llm.h  nlp.h  rule_checker.h  rule_engine.h  rule_parser.h  rules.h  ui_manager.h
lib/: cJSON.c  cJSON.h
src/: buffer.c  file_io.c  main.c  test_cjson.c  test_demo.c  test_parser.c  test_rule_checker.c  test_rule_parser.c  worker.c
src/llm/: llm_interface.c  llm_thread.c  test_llm.c  test_thread.c
src/nlp/: hunspell_wrap.c  nlp_engine.c  test_debug.c  test_hunspell.c  test_nlp.c  tokenizer.c
src/rules/: rule_checker.c  rule_engine.c  rule_parser.c
src/ui/: dialogs.c  main_window.c  rules_panel.c  scintilla_wrapper.c  statusbar.c  toolbar.c  ui_manager.c  ui_manager.h
